--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 selenium==4.15.2
 selenium-stealth==1.0.6
-pydantic==2.5.0
+pydantic>=2.7.0
 python-json-logger==2.0.7
 aiohttp==3.9.1
 pydantic_settings==2.10.1
